Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-64

lfs getstripe output inconsistent for directory default value

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.1.0, Lustre 1.8.7
    • Lustre 1.8.6
    • None
    • Linux x86_64
    • 3
    • 23,802
    • 4990

      lfs getstripe is printing inconsistent values for default striping values for directories.

      Our filesystem default values for striping are: count=2, size=1048576, offset=-1.

      If I create a new directory and look at its stripe values I see:

      $ mkdir testdir
      $ lfs getstripe testdir
      testdir
      stripe_count: 2 stripe_size: 1048576 stripe_offset: -1

      That is perfectly reasonable. But when I set any one of those values, it changes the way that the
      other default values are printed:

      $ lfs setstripe --count 4 testdir
      $ lfs getstripe testdir
      testdir
      stripe_count: 4 stripe_size: 0 stripe_offset: -1

      A user looks at that and says "oh no, it changed the size to zero!". Sure, essentially they are
      the same, since 0 in the size field means "use the default".

      If I recollect correctly from my experience with bug 19102 (and we are carrying the patch from that
      bug), the problem is that when the EA is not set ("lfs setstripe -c 0 -s 0 -o -1" clears the EA),
      it looks up the fs defaults and prints them. But when the EA IS set, the command is not looking up
      the global defaults for the fields that mean "use the default".

      This really needs to be consistent.

      See Also: Bugzilla #23802 https://bugzilla.lustre.org/show_bug.cgi?id=23802

            laisiyao Lai Siyao
            prakash Prakash Surya (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: