lustre/utils/lfs.c
@@ -134,7 +134,8 @@ command_t cmdlist[] = {
          "usage: getstripe [--obd|-O <uuid>] [--quiet | -q] [--verbose | -v]\n"
          "                 [--count | -c ] [--index | -i | --offset | -o]\n"
          "                 [--size | -s ] [--pool | -p ] [--directory | -d]\n"
-         "                 [--mdt | -M] [--recursive | -r] <directory|filename> ..."},
+         "                 [--mdt | -M] [--recursive | -r] [--raw | -R]\n"
+         "                 <directory|filename> ..."},
         {"pool_list", lfs_poollist, 0,
          "List pools or pool OSTs\n"
          "usage: pool_list <fsname>[.<pool>] | <pathname>\n"},
@@ -809,7 +810,7 @@ static int lfs_getstripe(int argc, char **argv)
 
         param.maxdepth = 1;
         optind = 0;
-        while ((c = getopt_long(argc, argv, "cdhiMoO:pqrsv",
+        while ((c = getopt_long(argc, argv, "cdhiMoO:pqrRsv",
                                 long_opts, NULL)) != -1) {
                 switch (c) {
                 case 'O':
@@ -860,6 +861,9 @@ static int lfs_getstripe(int argc, char **argv)
                         break;
                 case 'M':
                         param.get_mdt_index = 1;
+                        break;
+                case 'R':
+                        param.raw = 1;
                         break;
                 case '?':
                         return CMD_HELP;
